# iris.ai

./: .gitignore  README.md  pyproject.toml
frontend/: index.html
scripts/: build_chunks.py  example.txt  index_vectors.py  ingest_patents.py  reset_chunks_collection.py  reset_patents_collection.py
src/patent_rag_app/: __init__.py
src/patent_rag_app/api/: main.py
src/patent_rag_app/api/routers/: frontend.py  health.py  patents.py  search.py
src/patent_rag_app/config/: logging.py  settings.py
src/patent_rag_app/db/: chunk_repository.py  mongo_client.py  patent_repository.py  qdrant_client.py
src/patent_rag_app/ingestion/: chunk_builder.py  models.py  patent_ingestor.py  schemas.py
src/patent_rag_app/ingestion/parsers/: pdf_parser.py
src/patent_rag_app/llm/: answer_generator.py  available_patents_summarizer.py  embeddings.py  reranker.py
src/patent_rag_app/retrieval/: model.py  qdrant_store.py  service.py
tests/api/: test_frontend.py
tests/integration/: test_mongo_connection.py  test_mongo_patent_records.py  test_pdf_parser_smoke.py  test_qdrant_chunks.py  test_qdrant_connection.py
tests/manual/: claim_retrieval_check.py
tests/unit/: test_chunk_builder_claims.py
