[project]
name = "patent-rag-app"
version = "0.1.0"
description = "Patent RAG platform ingesting PDF corpora and serving grounded answers"
readme = "README.md"
authors = [
    { name = "gepirvu", email = "pirvugeorgian.bi@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.1.1",
    "python-json-logger>=2.0.7",
    "pymongo>=4.7.2",
    "qdrant-client>=1.9.0",
    "sentence-transformers>=3.0.0",
    "pdfplumber>=0.11.0",
    "openai>=1.41.0",
    "ollama>=0.3.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "black>=24.8.0"
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "Q", "ASYNC"]
aignore = ["E203"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
markers = ["integration: integration tests"]

